--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,17 @@
-﻿node_modules/
-dist/
+node_modules
+**/node_modules
+
+# build outputs
+**/dist
+
+# env files
 .env
+**/.env
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# misc
 .DS_Store
-desktop.ini
-__pycache__/
-.venv/
