--- a/apps/portal-rh/package.json
+++ b/apps/portal-rh/package.json
@@ -12,7 +12,8 @@
     "framer-motion": "^12.29.2",
     "lucide-react": "^0.542.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
