--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "@prisma/client": "5.10.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "pg": "^8.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
