Harden admin guard and polish pending badge/env errors

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,7 @@
-# PostgreSQL connection string
-# Example (local): postgresql://postgres:postgres@localhost:5432/employee_logistics?schema=public
 DATABASE_URL=
-
-# API port
 PORT=3001
-
-# CORS (use * in dev)
 CORS_ORIGIN=*
+JWT_SECRET=troque-por-uma-string-forte-longa
+ADMIN_KEY=troque-por-uma-string-forte
+USE_BOOTSTRAP_SCHEMA=false
+REQUIRE_EMPLOYEE_AUTH=false
