--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "start": "node server.js",
     "dev": "node --watch server.js",
     "migrate": "node ./src/runMigrate.js",
-    "set-pin": "node ./src/setPinCli.js"
+    "set-pin": "node ./src/setPinCli.js",
+    "set-pins-bulk": "node ./src/setPinsBulkCli.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
