--- a/apps/colaborador/package.json
+++ b/apps/colaborador/package.json
@@ -21,10 +21,12 @@
     "@capacitor/android": "^7.4.3"
   },
   "devDependencies": {
+    "@types/node": "^20.17.57",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.10",
+    "typescript": "^5.6.3",
     "vite": "^5.4.8",
     "@capacitor/cli": "^7.4.3"
   }
