--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,8 @@
 DATABASE_URL=
 PORT=3001
-CORS_ORIGIN=*
+CORS_ORIGINS=http://localhost:5173,http://localhost:5174,https://logisticapessoalpotalrh.vercel.app
+CORS_ALLOW_VERCEL=true
+CORS_ALLOW_NULL_ORIGIN=true
 JWT_SECRET=troque-por-uma-string-forte-longa
 ADMIN_KEY=troque-por-uma-string-forte
 USE_BOOTSTRAP_SCHEMA=false
