--- a/server/.env.example
+++ b/server/.env.example
@@ -1,6 +1,7 @@
 DATABASE_URL=
 PORT=3001
 CORS_ORIGINS=http://localhost:5173,http://localhost:5174,https://logisticapessoalpotalrh.vercel.app
+CORS_ORIGIN=*
 CORS_ALLOW_VERCEL=true
 CORS_ALLOW_NULL_ORIGIN=true
 JWT_SECRET=troque-por-uma-string-forte-longa
