--- a/server/package.json
+++ b/server/package.json
@@ -7,8 +7,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "migrate": "node ./src/runMigrate.js",
-    "set-pin": "node ./src/setPinCli.js"
+    "set-pin": "node ./src/setPinCli.js",
+    "prisma:generate": "prisma generate",
+    "prisma:deploy": "prisma migrate deploy"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -16,9 +17,13 @@
     "express": "^4.21.0",
     "pg": "^8.13.0",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "@prisma/client": "5.10.2"
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "devDependencies": {
+    "prisma": "5.10.2"
   }
 }
