--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node server.js",
+    "start": "npm run prisma:generate && npm run prisma:deploy && node server.js",
     "dev": "node --watch server.js",
     "set-pin": "node ./src/setPinCli.js",
     "prisma:generate": "prisma generate",
@@ -18,12 +18,10 @@
     "pg": "^8.13.0",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
-    "@prisma/client": "5.10.2"
+    "@prisma/client": "5.10.2",
+    "prisma": "5.10.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  },
-  "devDependencies": {
-    "prisma": "5.10.2"
   }
 }
